# Xangine

./: .gitignore  Agent.md  CMakeLists.txt  Compile Commands.txt  LICENSE  LICENSE.txt  README.md  RELEASE_NOTES.md  Required Changes.txt  Xangine Tester  Xangine Tester.cpp  compile_flags.txt
Examples/: CMakeLists.txt
Examples/01_WindowTest/: CMakeLists.txt  WindowTest.cpp  build.sh
Examples/02_Triangle/: CMakeLists.txt  Triangle.cpp
Examples/03_TheCube/: CMakeLists.txt  TheCube.cpp
include/: stb_image.h
include/Math/: Matrix4.hpp  Vector2.hpp  Vector4.hpp
include/Xangine/: Xangine.hpp
include/Xangine/Core/: BoundingBox.hpp  Camera.hpp  Colour.hpp  Input.hpp  Mesh.hpp  Object.hpp  Primitive.hpp  Ray.hpp  Scene.hpp  Transform.hpp  Version.hpp  Vertex.hpp  Viewport.hpp  Window.hpp
include/Xangine/Data/: VersionNumber.hpp
include/Xangine/Graphics/: Material.hpp  Renderer.hpp  RendererType.hpp  Shader.hpp  ShadingModel.hpp  Texture.hpp
include/Xangine/Math/: Math.hpp  Matrix4.hpp  Quaternion.hpp  Transform.hpp  Vector3.hpp
include/Xangine/Platform/: GLFW.hpp  OpenGL.hpp  Platform.hpp
src/Core/: Window.cpp
src/Graphics/Backend/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/Xangine/Core/: Input.cpp  Mesh.cpp  Object.cpp  Primitive.cpp  Scene.cpp  Shader.cpp  Transform.cpp  Window.cpp
src/Xangine/Graphics/: Texture.cpp
src/Xangine/Graphics/Backends/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/pytesseract/: adapter.py  objects.py  plans.md  py.py  pytesseract.py  renderer.py  scenes.py  tk.py
src/xgn2D_renderer/: _tester.py  objects.py  pytesseract.py  renderer.py
src/xgn3D_camera/: camera.hpp
src/xgn3D_datablock/: datablock.hpp  material.hpp  mesh.hpp
src/xgn3D_group/: group.hpp
src/xgn3D_light/: light.hpp
src/xgn3D_object/: object.hpp
src/xgn3D_scene/: scene.hpp
src/xgnUI_key/: keyboard.hpp  mouse.hpp  mouse_handler.hpp
src/xgn_container/: container.hpp
src/xgn_core/: 3D_data_loader.hpp  3D_obj_file_loader.hpp  core.hpp  osg_adapter.hpp  render_system.hpp
src/xgn_interface/: interface.hpp
src/xgn_log/: log.hpp  log_codes.txt
src/xgn_renderer/: 3D_renderer.hpp  render_engine_base.hpp  render_engine_manager.hpp  render_pass.hpp  renderer.hpp  renderer_core.hpp  shader_manager.hpp  shader_settings.hpp
src/xgn_renderer/DirectPass/: core.hpp
src/xgn_renderer/DirectPass/passes/: invert_pass.hpp
src/xgn_renderer/DirectPass/shaders/: common.vert  invert.frag
src/xgn_renderer/Hyperplane/: core.hpp
src/xgn_resources/: resource_paths.hpp
src/xgn_vector/: vector3D.hpp
src/xgn_window/: window.hpp
